--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "multifetch",
   "version": "0.0.1",
+  "repository": "git@github.com:e-conomic/multifetch.git",
   "description": "Express middleware for performing internal batch requests",
   "main": "source/index.js",
   "scripts": {
@@ -8,7 +9,7 @@
   },
   "dependencies": {
     "pump": "~0.2.3",
-    "xtend": "~2.1.1"
+    "extend": "~1.2.1"
   },
   "devDependencies": {
     "request": ">=2.30.0",
