--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "extend": "~1.2.1"
   },
   "devDependencies": {
-    "request": ">=2.30.0",
-    "express": ">=3.4.7",
-    "mocha": ">=1.15.1",
-    "chai": ">=1.8.1",
-    "sinon": ">=1.7.3",
-    "sinon-chai": ">=2.4.0",
-    "mocha-jshint": ">=0.0.7",
-    "once": ">=1.3.0"
+    "request": "~2.30.0",
+    "express": "~3.4.7",
+    "mocha": "~1.15.1",
+    "chai": "~1.8.1",
+    "sinon": "~1.7.3",
+    "sinon-chai": "~2.4.0",
+    "mocha-jshint": "~0.0.7",
+    "once": "~1.3.0"
   },
   "license": "MIT",
   "keywords": [
