--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
   },
   "devDependencies": {
     "request": "~2.30.0",
-    "express": "~3.4.7",
+    "express": "~4.10.1",
     "mocha": "~1.15.1",
     "chai": "~1.8.1",
     "sinon": "~1.7.3",
     "sinon-chai": "~2.4.0",
     "mocha-jshint": "~0.0.7",
-    "once": "~1.3.0"
+    "once": "~1.3.0",
+    "method-override": "~2.3.0",
+    "body-parser": "~1.9.2"
   },
   "license": "MIT",
   "keywords": [
